crates/gql_codegen_core/tests/snapshots/diagnostics__schema_parse_error.snap
---
source: crates/gql_codegen_core/tests/diagnostics.rs
expression: render_err(&err)
---
[Error]: syntax error: expected a Type

 schema.graphql:1:21
  1 │ type Query { field: }
    │                     ^
